phase 4 changes, late night coding session, DEBUG

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ Thumbs.db
 
 # Husky
 .husky/_
+AI Markdown Assistance/PHASE4_READINESS.md
+AI Markdown Assistance/PHASE4_PLAN.md
+AI Markdown Assistance/V4.0.0_SUMMARY.md
