--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/animejs": "^3.1.13",
     "@types/node": "^20.10.0",
+    "@types/papaparse": "^5.5.2",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "@vitest/ui": "^4.0.16",
@@ -44,6 +45,7 @@
     "animejs": "^4.2.2",
     "chart.js": "^4.4.0",
     "motion": "^10.16.4",
-    "nanostores": "^0.9.0"
+    "nanostores": "^0.9.0",
+    "papaparse": "^5.5.3"
   }
 }
