--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,10 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "prettier"],
+  "plugins": [
+    "@typescript-eslint",
+    "prettier"
+  ],
   "rules": {
     "prettier/prettier": "warn",
     "@typescript-eslint/no-explicit-any": "warn",
@@ -27,5 +30,10 @@
       }
     ]
   },
-  "ignorePatterns": ["dist", "node_modules", "*.config.js"]
+  "ignorePatterns": [
+    "dist",
+    "node_modules",
+    "*.config.js",
+    "functions/lib"
+  ]
 }
