--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.3",
+    "jsdom": "^27.4.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.2",
     "vite": "^7.3.1",
