rework:  GitHub Actions workflow for deploying to GitHub Pages and update npm dependencies.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@nanostores/persistent": "^0.9.0",
+    "all": "^0.0.0",
     "animejs": "^4.2.2",
     "chart.js": "^4.4.0",
     "firebase": "^10.7.1",
